fix: jdk8语法错误: setApplicationContext